--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "express": "^4.14.0",
-    "mongoose": "^4.7.7"
+    "mongoose": "^4.7.7",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "chai": "^3.5.0",
