--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^3.2.0"
+    "chai-as-promised": "^6.0.0",
+    "mocha": "^3.2.0",
+    "run-middleware": "^0.6.6"
   }
 }
