--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "argv-parser": "^0.1.4",
     "express": "^4.14.0",
     "mongoose": "^4.7.7",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "vorpal": "^1.11.4"
   },
   "devDependencies": {
     "chai": "^3.5.0",
