--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "argv-parser": "^0.1.4",
+    "bluebird": "^3.4.7",
     "express": "^4.14.0",
     "mongoose": "^4.7.7",
     "path": "^0.12.7",
